Fix scrolling on mobile, add swipe support

--- a/src/dynamic/AppRoot/style.scss
+++ b/src/dynamic/AppRoot/style.scss
@@ -40,6 +40,7 @@ html.html--app {
     .content-container {
         @extend %base-horizontal-container;
         $collapse-breakpoint: sm;
+        overflow: auto;
 
         pointer-events: none;
 
